Version ClaSS-0.9.13 release (2010/1/18)
-----------------------------------------

Tiny fix to the first book preference selection under staff_details.

Small improvement to identifying missing recipients for address labels.

Fix to removing budget reponsibilities.


Version ClaSS-0.9.12 release (2009/12/15)
-----------------------------------------

Improvement to the ldap_enrol_users to work around problems with Moodle
course enrolments.

Both the comment writer and fetchReportEntry now call upon a new
fetchProfileStatements function. These are for a special class of
sub-comment defined in catdef (type=sub,subtype=pro) which is
populated with fixed statements from a linked assessment profile.

Refactored the teacher enrolment in ldap_enrol_users.


Version ClaSS-0.9.11 release (2009/12/04)
-----------------------------------------

Made the enquired enrolment status a permanently fixed value in the
application table (and its not counted in the application total).

Removed the spell checker library (it was superceded long ago by
Firefox's in-built spell checker.)

The column filter for reports now grabs all linked assessments.

The register list now has tallies for students in school.

The list_class script now filters out any unassigned (and therefore
unused) classes from the MarkBook side options.

New address label printing implemented.

Added the custom group search to the InfoBook side-options for office
and amdin.


Version ClaSS-0.9.10 release (2009/11/30)
-----------------------------------------

New config option to choose between libphpmailer or PEAR Mail.

The message_event cron script now runs the mail queue every time cron runs.

Now displays siblings on the student_view page.

New config option to declare registration periods for teaching
classes.

Tidied code for ldap_enrol.

Moved the absence email message out to the language array.

Added clickthrus to InfoBook from report_reports.

Added SEN and Medical flags to the register_list.
